--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "helios-server"]
 	path = helios-server
 	url = git@github.com:benadida/helios-server.git
+#[submodule "app/zkp"]
+#	path = app/zkp
+#	url = git@github.com:zkcrypto/zkp.git
