--- a/app/board/Cargo.toml
+++ b/app/board/Cargo.toml
@@ -10,3 +10,10 @@ rocket = "0.4"
 rocket_contrib = "0.4"
 lib = { path = "../lib" }
 lazy_static = "1.4"
+serde_json = { version = "1.0"}
+[dependencies.curve25519-dalek]
+default-features = false
+features = ["serde", "std"]
+package = "curve25519-dalek-ng"
+version = "3"
+
