--- a/app/client/Cargo.toml
+++ b/app/client/Cargo.toml
@@ -11,3 +11,11 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 lib = { path = "../lib" }
 console = "0.15"
+zkp = { version = "0.8" }
+serde_json = { version = "1.0"}
+[dependencies.curve25519-dalek]
+default-features = false
+features = ["serde", "std"]
+package = "curve25519-dalek-ng"
+version = "3"
+
